binrw/tests/ui/invalid_keyword_enum_variant.stderr
error: expected one of: `big`, `little`, `map`, `try_map`, `magic`, `import`, `import_raw`, `assert`, `pre_assert`
 --> $DIR/invalid_keyword_enum_variant.rs:6:10
  |
6 |     #[br(invalid_enum_variant_keyword)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
